Day 2 and refactor
Completed P1 in 12:48 with a rank of 4581, P2 in 19:30 with a rank of 4345

--- a/Aoc 2022 College is Stressful Year/Aoc 2022 College is Stressful Year.csproj
+++ b/Aoc 2022 College is Stressful Year/Aoc 2022 College is Stressful Year.csproj
@@ -9,4 +9,10 @@
   <ItemGroup>
     <PackageReference Include="TextCopy" Version="6.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="inputs.txt">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
